# SuperMosaic

./: .gitignore  CMakeLists.txt  main.cpp
images/: findPets.txt
libs/: ImageDatabase.cpp  ImageDatabase.h  image_loader.cpp  image_loader.h
libs/cuda/: cudaSelect.cu
research/: ref.txt  todo.txt
